# Magenta

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cc
src/native/: native.h
src/native/linux-gtk/: Surface.h  linux_gtk.h
