cmake_minimum_required(VERSION 2.8)

project(Magenta)

IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")

  FIND_PACKAGE(PkgConfig REQUIRED)

  PKG_CHECK_MODULES(GTKMM REQUIRED gtkmm-3.0)

  INCLUDE_DIRECTORIES(${GTKMM_INCLUDE_DIRS})
  LINK_DIRECTORIES(${GTKMM_LIBRARY_DIRS})

  ADD_DEFINITIONS(${GTKMM_CFLAGS_OTHER})

ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")

add_executable(magenta ./src/main.cc ./src/native/native.h ./src/native/linux-gtk/linux_gtk.h)

IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")

  TARGET_LINK_LIBRARIES(magenta ${GTKMM_LIBRARIES})

ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")